// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests > react/SegmentedControl > ObjectSegments 1`] = `
<div
  data-dark={false}
>
  <div
    aria-label="test"
    aria-orientation="vertical"
    className="charcoal-segmented-control"
    id="react-aria-10"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      aria-disabled={false}
      className="charcoal-segmented-control-radio__label"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented-control-radio__input"
        disabled={false}
        name="test"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="option1"
      />
      選択肢1
    </label>
    <label
      aria-disabled={false}
      className="charcoal-segmented-control-radio__label"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented-control-radio__input"
        disabled={false}
        name="test"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="option2"
      />
      選択肢2
    </label>
    <label
      aria-disabled={false}
      className="charcoal-segmented-control-radio__label"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented-control-radio__input"
        disabled={false}
        name="test"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="option3"
      />
      選択肢3
    </label>
    <label
      aria-disabled={true}
      className="charcoal-segmented-control-radio__label"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented-control-radio__input"
        disabled={true}
        name="test"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        type="radio"
        value="option4"
      />
      選択肢4
    </label>
  </div>
</div>
`;

exports[`Storybook Tests > react/SegmentedControl > StringSegments 1`] = `
<div
  data-dark={false}
>
  <div
    aria-label="test"
    aria-orientation="vertical"
    className="charcoal-segmented-control"
    id="react-aria-6"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      aria-disabled={false}
      className="charcoal-segmented-control-radio__label"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented-control-radio__input"
        disabled={false}
        name="test"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="option1"
      />
      option1
    </label>
    <label
      aria-disabled={false}
      className="charcoal-segmented-control-radio__label"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented-control-radio__input"
        disabled={false}
        name="test"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="option2"
      />
      option2
    </label>
    <label
      aria-disabled={false}
      className="charcoal-segmented-control-radio__label"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented-control-radio__input"
        disabled={false}
        name="test"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="option3"
      />
      option3
    </label>
  </div>
</div>
`;
